# SpectrumAlert

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  analyze_anomalies.py  autonomous_service.py  deploy.sh  docker-compose.yml  dual_anomaly_monitor.py  frequency_monitor.py  main.py  pyproject.toml  requirements.txt  run_docker.sh  service_mode.py  setup.py  show_exact_frequencies.py  troubleshoot.sh  tune_anomaly_detection.py
config/: config.ini
data/: automated_20250807_233225_full.csv  automated_20250808_001819_full.csv  automated_20250808_005743_full.csv  automated_20250808_010503_lite.csv  automated_20250808_011944_full.csv
data/anomalies/: anomalies_20250808.csv  anomalies_20250809.csv
data/features/: features_20250808_lite.csv
models/: anomaly_detection_tuned_20250808_004959_full.pkl  anomaly_detection_tuned_20250808_004959_full_metadata.json  anomaly_detection_tuned_20250808_005408_full.pkl  anomaly_detection_tuned_20250808_005408_full_metadata.json  anomaly_model_lite_20250808_181617.meta.json  anomaly_model_lite_20250808_181617.pkl  anomaly_model_lite_20250809_095025.meta.json  anomaly_model_lite_20250809_100623.meta.json  anomaly_model_lite_20250809_102126.meta.json  anomaly_scaler_lite_20250808_181617.pkl  automated_anomaly_20250807_233225_full.pkl  automated_anomaly_20250807_233225_full_metadata.json  automated_anomaly_20250808_001819_full.pkl  automated_anomaly_20250808_001819_full_metadata.json  automated_anomaly_20250808_005743_full.pkl  automated_anomaly_20250808_005743_full_metadata.json  automated_anomaly_20250808_010503_lite.pkl  automated_anomaly_20250808_010503_lite_metadata.json  automated_anomaly_20250808_011944_full.pkl  automated_anomaly_20250808_011944_full_metadata.json  automated_rf_20250807_233225_full.pkl  automated_rf_20250807_233225_full_metadata.json  automated_rf_20250808_001819_full.pkl  automated_rf_20250808_001819_full_metadata.json  automated_rf_20250808_005743_full.pkl  automated_rf_20250808_005743_full_metadata.json  automated_rf_20250808_010503_lite.pkl  automated_rf_20250808_010503_lite_metadata.json  automated_rf_20250808_011944_full.pkl  automated_rf_20250808_011944_full_metadata.json
scripts/: cleanup_legacy.py
spectrum_alert/: __init__.py  __main__.py
spectrum_alert/application/: __init__.py
spectrum_alert/application/services/: orchestration.py
spectrum_alert/application/use_cases/: __init__.py  anomaly_detection.py  autonomous_learning.py  model_training.py  spectrum_monitoring.py
spectrum_alert/cli/: main.py
spectrum_alert/config/: manager.py  settings.py
spectrum_alert/core/: __init__.py  exceptions.py
spectrum_alert/core/domain/: __init__.py  models.py
spectrum_alert/core/interfaces/: __init__.py
spectrum_alert/core/services/: __init__.py  feature_extraction.py  model_manager.py
spectrum_alert/infrastructure/: __init__.py
spectrum_alert/infrastructure/messaging/: __init__.py
spectrum_alert/infrastructure/monitoring/: __init__.py
spectrum_alert/infrastructure/sdr/: __init__.py
spectrum_alert/infrastructure/storage/: __init__.py
src/: __init__.py
src/core/: __init__.py  data_collector.py  data_manager.py  feature_extraction.py  model_manager.py  mqtt_manager.py  robust_collector.py  sdr_interface.py  spectrum_monitor.py
src/utils/: __init__.py  config_manager.py  logger.py
